[package]
name = "transient_solar_battery_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
plotters = "0.3"
iced = {version="0.9", features = ["canvas"]}
iced_aw = {version="0.5", features = ["number_input"]}
plotters-iced = "0.8"
